# src/main/kotlin/no/nav/syfo/document/api/v1/dto/Document.kt
@@ -20,6 +20,7 @@ data class Document(
     val title: String,
     val summary: String?,
     val birthDate: LocalDate?,
+    val varselInstruks: VarselInstruks? = null,
 ) {
     fun toDocumentEntity(dialog: PersistedDialogEntity): DocumentEntity = DocumentEntity(
         documentId = documentId,
@@ -63,6 +64,7 @@ data class Document(
         if (title != other.title) return false
         if (summary != other.summary) return false
         if (birthDate != other.birthDate) return false
+        if (varselInstruks != other.varselInstruks) return false
 
         return true
     }
@@ -77,6 +79,7 @@ data class Document(
         result = 31 * result + orgNumber.hashCode()
         result = 31 * result + title.hashCode()
         result = 31 * result + (summary?.hashCode() ?: 0)
+        result = 31 * result + (varselInstruks?.hashCode() ?: 0)
         return result
     }
 }
